# Smart-Calculator-cpp-Qt

./: .gitignore  CMakeLists.txt  Main.qml  calculator.cpp  calculator.h  main.cpp
qml/: Main.qml
